@@ -54,6 +54,7 @@ MODx 0.9.6.3 (rev 4188 - September 28, 2008)
 * [FS#1076] [FS#853] Fix calendar JS error occurring if calendar TV name contains an hyphen
 * Updated TinyMCE to version 3.2.0.1
 * [FS#1036] Moved Rewrite Browser Paths (strip_image_paths) in configuration so that it's editable even when Enable Resource Browser is set to 'no'.
+* [FS#665] Fixed ViewPort Javascript code errors (thanks to Antonio)
 
 MODx 0.9.6.2 (rev 4076 - September 15, 2008)
 ====================================
